--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="https://media-exp1.licdn.com/dms/image/C4D03AQF59-4mJFfejQ/profile-displayphoto-shrink_400_400/0?e=1596067200&v=beta&t=dZ8VMJmaELHRKYJiJ4B9ETM3UfQ0vpQitkH4Y3eXWpg" alt="Noah.png" /></td>
+      <td><img src="https://media-exp1.licdn.com/dms/image/C4E03AQGZZSaNL0oRow/profile-displayphoto-shrink_400_400/0?e=1603324800&amp;v=beta&amp;t=ajQeMOWsY8ZHG3J0tQD5cafTa0eKLGjHWNA75BEpykA" alt="Noah.png" /></td>
       <td><h1> Noah Ezickson</h1>
       <p><em>Associate Consultant at <strong><a href="https://www.oracle.com/index.html">Oracle</a></strong>.</em></p>
       <p>Noah Ezickson graduated from Wake Forest University in 2020 with a Bachelors of Science in Mathematical Business.</p></td>
